--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "elastic-apm": "^0.3.0"
-  }
+    "elastic-apm": "^0.3.0",
+    "express": "^4.16.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ajpahl1008/apm-nodejs-test.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ajpahl1008/apm-nodejs-test/issues"
+  },
+  "homepage": "https://github.com/ajpahl1008/apm-nodejs-test#readme"
 }
