--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "apm-nodejs-test",
   "version": "1.0.0",
-  "description": "Stuff",
-  "main": "app.js",
+  "description": "The following packages will make life easy for you if you're on a Mac. ``` brew (get it here: https://brew.sh/) node (#brew install node) watch (#brew install watch) ``` The following packages will make life easy for you if you're on a PC. ``` Coming soon... ```",
+  "main": "app-multi-services.js",
+  "dependencies": {
+    "elastic-apm-node": "^1.6.0",
+    "express": "^4.16.3"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "elastic-apm": "^0.3.0",
-    "express": "^4.16.2"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ajpahl1008/apm-nodejs-test.git"
   },
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/ajpahl1008/apm-nodejs-test/issues"
   },
